--- a/src/components/Livedrop/livedrop.scss
+++ b/src/components/Livedrop/livedrop.scss
@@ -1,11 +1,11 @@
 @import '../../styles/variables';
 
 .livedrop-wrapper {
-  position: absolute;
+  position: fixed;
   width: 160px;
   left: 0;
   z-index: 11;
   background: $background;
-  height: 100vh;
   height: 100dvh;
+  box-shadow: 0 0 30px rgba(0,0,0,.5);
 }
