--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,6 +48,20 @@ a {
   color: $primary;
 }
 
+.go-back-link {
+  color: #bbb;
+  text-decoration: none;
+}
+
+.page-header {
+  margin-top: 10px;
+  font-size: 2.5rem;
+
+  svg {
+    color: $primary;
+  }
+}
+
 @font-face {
   font-family: 'Cobane';
   font-weight: 400;
