--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,10 @@ $primary: #43ea80;
 $background: #0d0c1d;
 $background-light: #1e1d2f;
 $background-dark: #070610;
+$collections-color: #43ea80;
+$upgrader-color: #43dcea;
+$scratch-cards-color: #7243ea;
+$daily-free-color: #ea43e2;
+$giveaways-color: #eab043;
+$godrop-pass-color: #ea4362;
+
