--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,10 +2,19 @@ $primary: #43ea80;
 $background: #0d0c1d;
 $background-light: #1e1d2f;
 $background-dark: #070610;
+
 $collections-color: #43ea80;
 $upgrader-color: #43dcea;
 $scratch-cards-color: #7243ea;
 $daily-free-color: #ea43e2;
 $giveaways-color: #eab043;
-$godrop-pass-color: #ea4362;
+$lucky-shot-color: #ea4362;
 
+$rarity-contraband: #ffae39;
+$rarity-rare: #FFD700;
+$rarity-covert: #EB4B4B;
+$rarity-classified: #D32EE6;
+$rarity-restricted: #8847FF;
+$rarity-mil-spec: #4B69FF;
+$rarity-industrial-grade: #5E98D9;
+$rarity-consumer-grade: #B0C3D9;
