--- a/src/styles/components/LiveDrop/LiveDropItem.scss
+++ b/src/styles/components/LiveDrop/LiveDropItem.scss
@@ -1,59 +1,17 @@
+@import '../../variables';
+
 .livedrop-item {
   width: 100%;
   height: 98px;
-  background: #1e1d2f;
+  background: rgb(32,32,51);
+  background: radial-gradient(circle, rgba(32,32,51,1) 0%, rgba(21,21,33,1) 80%);
   border-left: 2px solid #d32ee6;
   border-radius: 5px;
   position: relative;
 
-  &.covert {
-    border-color: #eb4b4b;
-  }
-
-  &.classified {
-    border-color: #d32ee6;
-  }
-
-  &.restricted {
-    border-color: #8847ff;
-  }
-
-  &.milspec {
-    border-color: #4b69ff;
-  }
-
-  &.rare {
-    border-color: gold;
-  }
-
   .cover {
     width: 100%;
     height: 100%;
-  }
-
-  &.covert .cover {
-    background: rgb(235, 75, 75);
-    background: linear-gradient(90deg, rgba(235, 75, 75, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
-  }
-
-  &.classified .cover {
-    background: rgb(211, 46, 230);
-    background: linear-gradient(90deg, rgba(211, 46, 230, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
-  }
-
-  &.restricted .cover {
-    background: rgb(136, 71, 255);
-    background: linear-gradient(90deg, rgba(136, 71, 255, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
-  }
-
-  &.milspec .cover {
-    background: rgb(75, 105, 255);
-    background: linear-gradient(90deg, rgba(75, 105, 255, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
-  }
-
-  &.rare .cover {
-    background: rgb(255, 215, 0);
-    background: linear-gradient(90deg, rgba(255, 215, 0, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
   }
 
   .drop-type {
@@ -109,10 +67,57 @@
     align-items: center;
     justify-content: center;
     filter: blur(3px);
+    mix-blend-mode: overlay;
 
     img {
       width: 60%;
-      opacity: 0.03;
+      opacity: 0.2;
+    }
+  }
+
+  .shape {
+    width: 38%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-40%, -60%) rotate(45deg);
+    opacity: 0.4;
+    filter: blur(1px);
+
+    svg {
+      overflow: visible;
+    }
+
+    .triangle {
+      fill:none;
+      stroke:#000000;
+      stroke-width:2;
+      stroke-miterlimit:10;
+
+      &.covert {
+        stroke: #eb4b4b;
+        filter: drop-shadow(0 0 10px #eb4b4b) blur(1px);
+      }
+
+      &.classified {
+        stroke: #d32ee6;
+        filter: drop-shadow(0 0 10px #d32ee6) blur(1px);
+      }
+
+      &.restricted {
+        stroke: #8847ff;
+        filter: drop-shadow(0 0 10px #8847ff) blur(1px);
+      }
+
+      &.milspec {
+        stroke: #4b69ff;
+        filter: drop-shadow(0 0 10px #4b69ff) blur(1px);
+      }
+
+      &.rare {
+        stroke: gold;
+        filter: drop-shadow(0 0 10px gold) blur(1px);
+      }
     }
   }
 
@@ -121,11 +126,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-52%, -50%);
 
     img {
       width: 100%;
-      filter: drop-shadow(0 0 10px rgba(0,0,0,0.6));
+      filter: drop-shadow(0 0 10px rgba(0,0,0,0.8));
     }
   }
 }
