--- a/src/styles/pages/SkinBase/SkinBase.scss
+++ b/src/styles/pages/SkinBase/SkinBase.scss
@@ -1,7 +1,9 @@
+@import '../../variables';
+
 .skinbase {
 
   main {
-    background-image: url('public/backgrounds/m4howl.jpg');
+    background-image: url('/backgrounds/m4howl.jpg');
     position: relative;
   }
 
@@ -9,18 +11,5 @@
     display: flex;
     margin-top: 30px;
     gap: 30px;
-
-    .skinbase-nav {
-      background: rgba(30, 29, 47, 0.5);
-      border: 1px solid rgba(255,255,255,.2);
-      min-height: 300px;
-      width: 240px;
-      border-radius: 15px;
-    }
-
-    .skin-list {
-      background: blue;
-      flex-grow: 1;
-    }
   }
 }
