--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,3 +18,12 @@ $rarity-restricted: #8847FF;
 $rarity-mil-spec: #4B69FF;
 $rarity-industrial-grade: #5E98D9;
 $rarity-consumer-grade: #B0C3D9;
+
+$wear-fn: #178391;
+$wear-mw: #76B400;
+$wear-ft: #E5BF26;
+$wear-ww: #FF8029;
+$wear-bs: #FF3E2F;
+
+$box-shadow-1: 0 3px 10px rgba(0,0,0,0.3);
+$border-color: rgba(255,255,255,.2);
