SkinBase home page and collections page design

--- a/src/styles/pages/Collections/Collections.scss
+++ b/src/styles/pages/Collections/Collections.scss
@@ -1,9 +1,12 @@
 @import '../../variables';
 
 .collections {
-
   main {
     background-image: url('public/backgrounds/m4howl.jpg');
     position: relative;
+  }
+
+  .collections-list {
+    margin-top: 40px;
   }
 }
