--- a/src/styles/components/CollectionCard.scss
+++ b/src/styles/components/CollectionCard.scss
@@ -1,36 +1,61 @@
 @import '../variables';
 
 .collection-card {
-  width: 236px;
   border-radius: 15px;
   position: relative;
-  overflow: visible;
   box-shadow: $box-shadow-1;
 
-  img {
+  .cover {
+    position: absolute;
     width: 100%;
+    height: 100%;
+    background: rgb(7,6,16);
+    background: radial-gradient(circle, rgba(7,6,16,0) 30%, rgba(7,6,16,1) 100%);
+    opacity: 0.3;
+    transition: opacity 0.3s ease;
+    top: 0;
+    left: 0;
     border-radius: 15px;
   }
 
-  .collection-name {
+  .collection-img {
+    width: 100%;
+    aspect-ratio: 3/4;
+    overflow: hidden;
+    border-radius: 15px;
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      transition: transform 0.3s ease;
+    }
+  }
+
+  .collection-name-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
-    bottom: 4px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: $background-light;
-    padding: 8px 14px;
-    border-radius: 10px 10px 0 0;
-    border: 1px solid $border-color;
-    border-bottom: none;
-    font-size: 0.9rem;
-    font-weight: 700;
+    width: 100%;
+    bottom: 0;
+
+    .collection-name {
+      background: $background-light;
+      padding: 10px 14px;
+      border-radius: 10px 10px 0 0;
+      border: 1px solid $border-color;
+      border-bottom: none;
+      font-size: 0.9rem;
+      font-weight: 700;
+      text-align: center;
+      box-shadow: $box-shadow-1;
+    }
   }
 
   .collection-price {
     position: absolute;
     top: 20px;
-    right: -36px;
-    transform: translateX(-50%);
+    right: -7px;
     background: $background-light;
     padding: 10px 12px;
     border-radius: 10px 0 0 10px;
@@ -38,5 +63,29 @@
     border-right: none;
     font-size: 0.9rem;
     font-weight: 600;
+    box-shadow: $box-shadow-1;
+
+    &:after {
+      content: '';
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 7px 7px 0 0;
+      border-color: $border-color transparent transparent transparent;
+      position: absolute;
+      right: 0;
+      bottom: -8px;
+    }
+  }
+
+  &:hover {
+    .collection-img {
+      img {
+        transform: scale(1.1);
+      }
+    }
+    .cover {
+      opacity: 0;
+    }
   }
 }
