Sign In and Sign Up modal

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,10 @@ body {
   background: $background-dark;
   color: #fff;
   padding-left: 160px;
+
+  &.lock-scroll {
+    overflow: hidden;
+  }
 }
 
 main {
