--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@ $primary: #43ea80;
 $background: #0d0c1d;
 $background-light: #1e1d2f;
 $background-dark: #070610;
+$red: #ff4444;
 
 $collections-color: #43ea80;
 $upgrader-color: #43dcea;
