--- a/src/styles/components/CollectionCard.scss
+++ b/src/styles/components/CollectionCard.scss
@@ -4,6 +4,7 @@
   border-radius: 15px;
   position: relative;
   box-shadow: $box-shadow-1;
+  transition: transform 0.3s ease;
 
   .cover {
     position: absolute;
@@ -79,6 +80,8 @@
   }
 
   &:hover {
+    transform: translateY(-10px);
+
     .collection-img {
       img {
         transform: scale(1.1);
