--- a/src/styles/components/Header/Header.scss
+++ b/src/styles/components/Header/Header.scss
@@ -10,6 +10,7 @@ header {
   top: 0;
   box-shadow: 0 0 30px rgba(0,0,0,.5);
   z-index: 10;
+  transition: width 0.5s ease;
 
   .header-top {
     background: $background-light;
