--- a/src/styles/components/LiveDrop/LiveDrop.scss
+++ b/src/styles/components/LiveDrop/LiveDrop.scss
@@ -8,6 +8,7 @@
   background: $background;
   height: 100dvh;
   box-shadow: 0 0 30px rgba(0,0,0,.5);
+  transition: margin-left 0.5s ease;
 
   .livedrop-wrapper {
     height: 100%;
@@ -108,6 +109,10 @@
       box-shadow: 5px 0 20px -10px rgba(0,0,0,.5);
       cursor: pointer;
       transition: color 0.3s ease;
+
+      svg {
+        transition: transform 0.5s ease;
+      }
 
       &:hover {
         color: #fff;
