--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,9 +27,18 @@ body {
   background: $background-dark;
   color: #fff;
   padding-left: 160px;
+  transition: padding-left 0.5s ease;
 
   &.lock-scroll {
     overflow: hidden;
+  }
+
+  &.live-drop-hidden {
+    padding-left: 0;
+
+    header {
+      width: 100% !important;
+    }
   }
 }
 
