--- a/src/styles/modals/SignModal/SignInModal.scss
+++ b/src/styles/modals/SignModal/SignInModal.scss
@@ -79,8 +79,8 @@
 
           svg {
             color: $primary;
-            font-size: 1rem;
-            margin-bottom: 0;
+            font-size: 1.4rem;
+            margin-bottom: 1px;
           }
         }
 
