--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -27,4 +27,5 @@ $wear-ww: #FF8029;
 $wear-bs: #FF3E2F;
 
 $box-shadow-1: 0 3px 10px rgba(0,0,0,0.3);
+$filter-shadow: drop-shadow(0 0 15px rgba(0, 0, 0, 0.3));
 $border-color: rgba(255,255,255,.2);
