--- a/src/styles/pages/Collection/Collection.scss
+++ b/src/styles/pages/Collection/Collection.scss
@@ -6,11 +6,26 @@
   background-size: cover;
   position: relative;
 
+  .collection-background {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: translateY(-10px);
+    }
+  }
+
   > .cover {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(7, 6, 16, 0.75);
+    background: rgba(7, 6, 16, 0.7);
     z-index: 1;
   }
 
@@ -19,7 +34,7 @@
     width: 100%;
     height: 100%;
     background: rgb(7, 6, 16);
-    background: linear-gradient(0deg, rgba(7, 6, 16, 1) 20%, rgba(7, 6, 16, 0) 100%);
+    background: linear-gradient(0deg, rgba(7, 6, 16, 1) 10%, rgba(7, 6, 16, 0) 100%);
     bottom: 0;
     left: 0;
     z-index: 1;
@@ -30,21 +45,47 @@
     z-index: 2;
     height: 100%;
 
-    .collection-header {
+    .collection-top {
       display: flex;
-      align-items: center;
-      gap: 12px;
-      margin-top: 6px;
+      align-items: end;
+      justify-content: space-between;
 
-      h1 {
-        font-size: 2.5rem;
-        text-align: center;
-        margin-top: 3px;
+      .collection-header {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-top: 6px;
+
+        h1 {
+          font-size: 2.5rem;
+          text-align: center;
+          margin-top: 3px;
+        }
+
+        img {
+          height: 3.5rem;
+          border-radius: 5px;
+        }
       }
 
-      img {
-        height: 3.5rem;
-        border-radius: 5px;
+      .collection-options {
+        display: flex;
+        gap: 8px;
+
+        .option {
+          background: red;
+          width: 45px;
+          height: 35px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 8px;
+          background: $background-light;
+          border: 1px solid $border-color;
+          color: #aaa;
+          opacity: 0.5;
+          cursor: pointer;
+        }
       }
     }
 
@@ -86,13 +127,18 @@
         padding: 10px 14px 7px 14px;
         border-radius: 6px;
         border: 2px solid #43EA80;
+        transition: opacity 0.3s ease;
+
+        &.inactive {
+          pointer-events: none;
+          opacity: 0.5;
+        }
       }
     }
   }
 }
 
 .collection-items {
-  background: rgba(255,255,255,.015);
   padding-top: 60px;
   padding-bottom: 80px;
 
