--- a/src/styles/pages/Collection/CollectionDrawer.scss
+++ b/src/styles/pages/Collection/CollectionDrawer.scss
@@ -2,13 +2,46 @@
 
 .drawer {
   width: 100%;
-  height: 220px;
+  height: 230px;
   background: rgba(7, 6, 16, 0.7);
   backdrop-filter: blur(2px);
   border: 2px solid $background-light;
   border-radius: 20px;
   position: relative;
   overflow: hidden;
+  margin-top: 24px;
+
+  //.drawer-card {
+  //  position: absolute;
+  //  z-index: 1;
+  //  height: 100%;
+  //  aspect-ratio: 3/4;
+  //  left: 50%;
+  //  top: 50%;
+  //  transform: translate(-50%, -50%);
+  //  overflow: visible;
+  //  border-radius: 15px;
+  //  display: flex;
+  //  flex-direction: column;
+  //
+  //  .top, .bot {
+  //    height: 50%;
+  //    width: 100%;
+  //
+  //    img {
+  //      width: 100%;
+  //      height: 100%;
+  //      object-fit: cover;
+  //      object-position: top;
+  //      border-radius: 15px 15px 0 0;
+  //    }
+  //  }
+  //
+  //  .bot img {
+  //    object-position: bottom;
+  //    border-radius: 0 0 15px 15px;
+  //  }
+  //}
 
   .cover {
     width: 100%;
@@ -18,6 +51,100 @@
     left: 0;
     background: rgba(7, 6, 16, 0);
     background: linear-gradient(90deg, rgba(7, 6, 16, 1) 0%, rgba(7, 6, 16, 0) 40%, rgba(7, 6, 16, 0) 60%, rgba(7, 6, 16, 1) 100%);
+  }
+
+  .draw-result {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(7, 6, 16, 0.8);
+    backdrop-filter: blur(3px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    opacity: 0;
+    pointer-events: none;
+
+    &.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .result-box {
+      width: 200px;
+      background: $background;
+      height: 150px;
+      border-radius: 12px;
+      border: 1px solid $border-color;
+      position: relative;
+
+      .result-cover {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 12px;
+      }
+
+      img {
+        height: 65%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        filter: $filter-shadow;
+      }
+
+      .name {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+
+        .weapon {
+          color: #ddd;
+          font-weight: 300;
+          margin-top: 3px;
+          font-size: 0.7rem;
+        }
+
+        .skin {
+          font-weight: 600;
+          font-size: 0.9rem;
+          color: #fff;
+          margin-top: 1px;
+        }
+      }
+
+      .wear {
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        font-weight: 300;
+        color: #ddd;
+        font-size: 0.7rem;
+      }
+    }
+
+    .details {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      button {
+        display: block;
+        background: $background-light;
+        color: #fff;
+        font-weight: 600;
+        font-size: 0.9rem;
+        padding: 10px 14px 7px 14px;
+        border-radius: 6px;
+        border: 2px solid $border-color;
+      }
+    }
   }
 
   .arrow-bot {
@@ -51,6 +178,8 @@
     height: 100%;
     width: fit-content;
     display: flex;
+    padding-block: 1px;
+    gap: 1px;
 
     .item {
       display: flex;
@@ -59,7 +188,6 @@
       padding: 8px 12px;
       width: 180px;
       border-bottom: 3px solid red;
-      border-right: 1px solid $background-dark !important;
 
       .img {
         flex: 1;
