--- a/src/styles/pages/Home/HomeBanner/HomeBanner.scss
+++ b/src/styles/pages/Home/HomeBanner/HomeBanner.scss
@@ -1,9 +1,22 @@
 .home-banner {
   width: 100%;
   height: 650px;
-  background: url("/howling-fury-background.jpg") center center;
-  background-size: cover;
   position: relative;
+
+  .background {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: translateY(-10px);
+    }
+  }
 
   .cover {
     position: absolute;
@@ -68,7 +81,7 @@
           margin-top: 20px;
           width: fit-content;
           padding-bottom: 50px;
-          animation: possible-items-animation 8s linear infinite;
+          animation: possible-items-animation 15s linear infinite;
         }
 
         @keyframes possible-items-animation {
@@ -76,7 +89,7 @@
             left: 0;
           }
           to {
-            left: -540px;
+            left: -1080px;
           }
         }
       }
