--- a/src/styles/rarities.scss
+++ b/src/styles/rarities.scss
@@ -4,6 +4,10 @@
   background: linear-gradient($deg, rgba($color, $alpha) $start, rgba(255, 255, 255, 0) $end);
 }
 
+@mixin rarity-radial-gradient($color, $alpha, $deg, $start, $end) {
+  background: linear-gradient($deg, rgba($color, $alpha) $start, rgba(255, 255, 255, 0) $end);
+}
+
 $rarities: (
         contraband: $rarity-contraband,
         rare: $rarity-rare,
@@ -83,6 +87,14 @@ $wears: (
   @each $rarity, $color in $rarities {
     &.#{$rarity} {
       @include rarity-gradient($color, 0.20, 0deg, 0%, 90%);
+    }
+  }
+}
+
+.rarity-radial-gradient {
+  @each $rarity, $color in $rarities {
+    &.#{$rarity} {
+      background: radial-gradient(circle, $color 0%, rgba(0, 0, 0, 0) 60%);
     }
   }
 }
