--- a/src/styles/components/LiveDrop/LiveDrop.scss
+++ b/src/styles/components/LiveDrop/LiveDrop.scss
@@ -27,6 +27,31 @@
       left: 0;
     }
 
+    .livedrop-pause {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $red;
+      font-size: 0.9rem;
+      font-weight: 600;
+      background: rgba(63, 14, 14, 0.5);
+      box-shadow: 0 0 20px rgba(0,0,0,.3);
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      transform: translateY(40px);
+      opacity: 0;
+
+      &.paused {
+        transform: none;
+        opacity: 1;
+      }
+    }
+
     .livedrop-header {
       background: $background-light;
       text-align: left;
@@ -95,6 +120,7 @@
         justify-content: center;
         align-items: center;
         gap: 3px;
+        cursor: pointer;
 
         &.selected {
           opacity: 1;
