--- a/src/styles/components/LiveDrop/LiveDropItem.scss
+++ b/src/styles/components/LiveDrop/LiveDropItem.scss
@@ -22,125 +22,167 @@
   .cover {
     width: 100%;
     height: 100%;
+    position: absolute;
   }
 
-  .drop-type {
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    color: #bbb;
-    font-size: 0.5rem;
-
-    svg {
-      margin-right: 2px;
-      display: inline-block;
-    }
+  .item-content-container {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    overflow: hidden;
   }
 
-  .wear {
+  .item-content {
     position: absolute;
-    top: 8px;
-    left: 8px;
-    color: #aaa;
-    font-weight: 400;
-    font-size: 0.6rem;
-    opacity: 0.9;
+    width: 100%;
+    height: 200%;
+    top: 0;
+    left: 0;
+    transition: top 0.3s ease;
   }
 
-  .details {
-    position: absolute;
-    left: 8px;
-    bottom: 8px;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
+  &:hover .item-content {
+    top: -100%;
+  }
 
-    .weapon {
-      color: #8a8a8a;
-      font-weight: 600;
+  .main-content {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    top: 0;
+    left: 0;
+
+    .drop-type {
+      position: absolute;
+      right: 8px;
+      top: 8px;
+      color: #bbb;
       font-size: 0.5rem;
+
+      svg {
+        margin-right: 2px;
+        display: inline-block;
+      }
     }
 
-    .skin-name {
-      color: #fff;
-      font-size: 0.7rem;
+    .wear {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      color: #aaa;
+      font-weight: 400;
+      font-size: 0.6rem;
+      opacity: 0.9;
+    }
+
+    .details {
+      position: absolute;
+      left: 8px;
+      bottom: 8px;
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+
+      .weapon {
+        color: #8a8a8a;
+        font-weight: 600;
+        font-size: 0.5rem;
+      }
+
+      .skin-name {
+        color: #fff;
+        font-size: 0.7rem;
+      }
+    }
+
+    .godrop-mark {
+      width: 80%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      filter: blur(3px);
+      mix-blend-mode: overlay;
+
+      img {
+        width: 60%;
+        opacity: 0.2;
+      }
+    }
+
+    .shape {
+      width: 38%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-40%, -60%) rotate(45deg);
+      opacity: 0.4;
+      filter: blur(1px);
+
+      svg {
+        overflow: visible;
+      }
+
+      .triangle {
+        fill:none;
+        stroke:#000000;
+        stroke-width:2;
+        stroke-miterlimit:10;
+
+        &.covert {
+          stroke: #eb4b4b;
+          filter: drop-shadow(0 0 10px #eb4b4b) blur(1px);
+        }
+
+        &.classified {
+          stroke: #d32ee6;
+          filter: drop-shadow(0 0 10px #d32ee6) blur(1px);
+        }
+
+        &.restricted {
+          stroke: #8847ff;
+          filter: drop-shadow(0 0 10px #8847ff) blur(1px);
+        }
+
+        &.milspec {
+          stroke: #4b69ff;
+          filter: drop-shadow(0 0 10px #4b69ff) blur(1px);
+        }
+
+        &.rare {
+          stroke: gold;
+          filter: drop-shadow(0 0 10px gold) blur(1px);
+        }
+      }
+    }
+
+    .image {
+      width: 63%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-52%, -50%);
+
+      img {
+        width: 100%;
+        filter: drop-shadow(0 0 10px rgba(0,0,0,0.8));
+      }
     }
   }
 
-  .godrop-mark {
-    width: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .detail-content {
     display: flex;
     align-items: center;
     justify-content: center;
-    filter: blur(3px);
-    mix-blend-mode: overlay;
-
-    img {
-      width: 60%;
-      opacity: 0.2;
-    }
-  }
-
-  .shape {
-    width: 38%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-40%, -60%) rotate(45deg);
-    opacity: 0.4;
-    filter: blur(1px);
-
-    svg {
-      overflow: visible;
-    }
-
-    .triangle {
-      fill:none;
-      stroke:#000000;
-      stroke-width:2;
-      stroke-miterlimit:10;
-
-      &.covert {
-        stroke: #eb4b4b;
-        filter: drop-shadow(0 0 10px #eb4b4b) blur(1px);
-      }
-
-      &.classified {
-        stroke: #d32ee6;
-        filter: drop-shadow(0 0 10px #d32ee6) blur(1px);
-      }
-
-      &.restricted {
-        stroke: #8847ff;
-        filter: drop-shadow(0 0 10px #8847ff) blur(1px);
-      }
-
-      &.milspec {
-        stroke: #4b69ff;
-        filter: drop-shadow(0 0 10px #4b69ff) blur(1px);
-      }
-
-      &.rare {
-        stroke: gold;
-        filter: drop-shadow(0 0 10px gold) blur(1px);
-      }
-    }
-  }
-
-  .image {
-    width: 63%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-52%, -50%);
-
-    img {
-      width: 100%;
-      filter: drop-shadow(0 0 10px rgba(0,0,0,0.8));
-    }
+    position: relative;
+    width: 100%;
+    height: 50%;
+    top: 0;
+    left: 0;
   }
 }
