--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -122,6 +122,60 @@ button, input[type=submit], input[type=reset] {
   outline: inherit;
 }
 
+.float-range {
+  position: relative;
+  margin-top: 20px;
+  padding-bottom: 16px;
+
+  .float-range-stripe, .float-range-stripe-dark {
+    background: red;
+    width: 100%;
+    height: 5px;
+    border-radius: 5px;
+    display: flex;
+    overflow: hidden;
+
+    div { height: 100%; }
+    .FN { width: 7%; }
+    .MW { width: 8%; }
+    .FT { width: 23%; }
+    .WW { width: 7%; }
+    .BS { width: 55%; }
+  }
+
+  .float-range-stripe-dark {
+    opacity: 0.2;
+  }
+
+  .float-range-stripe {
+    margin-top: -5px;
+  }
+
+  .indicator {
+    position: absolute;
+    top: -4px;
+    z-index: 3;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(-50%);
+
+    .stripe {
+      height: 12px;
+      width: 2px;
+      border-radius: 2px;
+      background: #aaa;
+    }
+
+    .value {
+      margin-top: 3px;
+      font-size: 0.7rem;
+      color: #ddd;
+    }
+  }
+}
+
 @font-face {
   font-family: 'Cobane';
   font-weight: 400;
