--- a/src/styles/pages/Collection/Collection.scss
+++ b/src/styles/pages/Collection/Collection.scss
@@ -34,7 +34,7 @@
     width: 100%;
     height: 100%;
     background: rgb(7, 6, 16);
-    background: linear-gradient(0deg, rgba(7, 6, 16, 1) 10%, rgba(7, 6, 16, 0) 100%);
+    background: linear-gradient(0deg, rgba(7, 6, 16, 1) 20%, rgba(7, 6, 16, 0) 100%);
     bottom: 0;
     left: 0;
     z-index: 1;
@@ -42,7 +42,7 @@
 
   .collection-content {
     position: relative;
-    z-index: 2;
+    z-index: 101;
     height: 100%;
 
     .collection-top {
@@ -118,6 +118,40 @@
       border-radius: 0 0 8px 8px;
       width: fit-content;
       margin: auto;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      .quantity-options {
+        display: flex;
+        gap: 5px;
+        margin-top: 2px;
+
+        .option {
+          height: 28px;
+          background: red;
+          aspect-ratio: 1/1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: rgba(7, 6, 16, 0.5);
+          border-radius: 6px;
+          border: 1px solid $border-color;
+          color: #aaa;
+          padding-top: 2px;
+          font-weight: 300;
+          font-size: 0.9rem;
+          cursor: pointer;
+          opacity: 0.8;
+
+          &.selected {
+            border-color: $primary;
+            color: $primary;
+            font-weight: 400;
+            opacity: 1;
+          }
+        }
+      }
 
       button {
         display: block;
@@ -133,6 +167,20 @@
           pointer-events: none;
           opacity: 0.5;
         }
+      }
+    }
+  }
+}
+
+.collection-best {
+  .collection-best-content {
+    h2 {
+      font-weight: 600;
+      font-size: 1.1rem;
+      text-align: center;
+
+      svg {
+        color: #ea9c43;
       }
     }
   }
