--- a/src/styles/components/Header/HeaderSearch.scss
+++ b/src/styles/components/Header/HeaderSearch.scss
@@ -1,13 +1,25 @@
+@import '../../variables';
+
 .header-search {
   position: relative;
 
   input {
-    padding: 8px 28px 8px 12px;
+    padding: 9px 28px 7px 12px;
     background: #1e1d2f;
     border: 1px solid #302f3f;
     border-radius: 8px;
     color: #fff;
     width: 250px;
+    font-family: "BR Cobane", sans-serif;
+
+    &:focus {
+      outline: none;
+      border-color: #4c4b64;
+
+      &~.suggestions {
+        display: block;
+      }
+    }
   }
 
   button {
@@ -21,14 +33,58 @@
 
   .suggestions {
     position: absolute;
-    top: 32px;
+    top: 30px;
     left: 0;
     width: 300px;
-    height: 100px;
     z-index: 1;
     background: #1e1d2f;
     border: 1px solid #302f3f;
-    border-radius: 8px;
+    border-radius: 8px 0 0 8px;
+    max-height: 330px;
+    overflow-y: scroll;
+    display: none;
+    box-shadow: 0 0 15px rgba(0,0,0,.3);
 
+    .suggestions-list {
+      display: flex;
+      flex-direction: column;
+
+      .suggestion {
+        height: 60px;
+        padding: 5px 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $border-color;
+        }
+
+        .image {
+          height: 100%;
+          aspect-ratio: 1/1;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          }
+        }
+
+        .detail {
+          .type {
+            text-transform: capitalize;
+            font-size: 0.6rem;
+            color: #ccc;
+          }
+
+          .name {
+            font-size: 0.8rem;
+            margin-top: 3px;
+            font-weight: 600;
+          }
+        }
+      }
+    }
   }
 }
