--- a/src/styles/pages/Collection/Collection.scss
+++ b/src/styles/pages/Collection/Collection.scss
@@ -1,5 +1,25 @@
 @import '../../variables';
 
+.collection-section-header {
+  display: flex;
+  justify-content: center;
+  border-bottom: 2px solid $border-color;
+
+  h2 {
+    font-size: 1rem;
+    padding: 12px 20px;
+    border-radius: 10px 10px 0 0;
+    color: #eee;
+    font-weight: 600;
+    background: $background-light;
+
+    svg {
+      color: $primary;
+      margin-right: 2px;
+    }
+  }
+}
+
 .collection {
   width: 100%;
   background: url("/howling-fury-background.jpg") center center;
@@ -174,29 +194,127 @@
 
 .collection-best {
   .collection-best-content {
-    h2 {
-      font-weight: 600;
-      font-size: 1.1rem;
-      text-align: center;
+    .collection-best-list {
+      display: flex;
+      margin-top: 20px;
+      gap: 10px;
 
-      svg {
-        color: #ea9c43;
+      .collection-best-item {
+        border: 1px solid $border-color;
+        height: 200px;
+        background: $background;
+        flex-grow: 1;
+        border-radius: 10px;
+        position: relative;
+
+        .cover {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          border-radius: 10px;
+        }
+
+        .godrop-mark {
+          position: absolute;
+          width: 40%;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          filter: blur(4px);
+          mix-blend-mode: overlay;
+
+          img {
+            width: 100%;
+            opacity: 0.2;
+          }
+        }
+
+        .image {
+          position: absolute;
+          top: 52%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          width: 65%;
+
+          img {
+            width: 100%;
+            filter: $filter-shadow;
+          }
+        }
+
+        .dropper {
+          position: absolute;
+          left: 15px;
+          top: 15px;
+          display: flex;
+          gap: 6px;
+
+          .avatar {
+            width: 26px;
+
+            img {
+              width: 100%;
+              border-radius: 100%;
+            }
+          }
+
+          .details {
+            .username {
+              font-size: 0.8rem;
+            }
+            .time-elapsed {
+              font-size: 0.7rem;
+              color: #ccc;
+              font-weight: 400;
+            }
+          }
+        }
+
+        .chance {
+          position: absolute;
+          right: 15px;
+          top: 15px;
+          font-size: 0.65rem;
+          text-align: right;
+          color: #ddd;
+        }
+
+        > .details {
+          position: absolute;
+          bottom: 15px;
+          left: 15px;
+
+          .weapon {
+            color: #aaa;
+            font-size: 0.7rem;
+          }
+
+          .skin {
+            font-weight: 600;
+          }
+
+          .wear {
+            font-size: 0.7rem;
+            margin-top: 2px;
+            color: #aaa;
+          }
+
+          .price {
+            font-weight: 600;
+            margin-top: 4px;
+            font-size: 0.9rem;
+          }
+        }
       }
     }
   }
 }
 
 .collection-items {
-  padding-top: 60px;
+  margin-top: 30px;
   padding-bottom: 80px;
 
   .collection-items-content {
-
-    h2 {
-      color: #fff;
-      font-weight: 600;
-      font-size: 1.2rem;
-    }
 
     .collection-items-list {
       display: grid;
