--- a/src/styles/pages/Collection/CollectionItem.scss
+++ b/src/styles/pages/Collection/CollectionItem.scss
@@ -1,9 +1,32 @@
 .collection-items-list {
   .skin {
     position: relative;
+    backdrop-filter: none;
+
+    .skin-data {
+      .skin-price {
+        font-size: 0.8rem;
+      }
+    }
 
     .wear-details {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      background: rgba(0,0,0,.5);
+      border-radius: 16px;
+      padding: 10px 14px;
+      display: none;
 
+      .wears-table {
+        font-size: 0.7rem;
+        width: 100%;
+        text-align: left;
+        font-weight: 300;
+      }
     }
   }
 }
