--- a/src/styles/rarities.scss
+++ b/src/styles/rarities.scss
@@ -43,6 +43,14 @@ $wears: (
   }
 }
 
+.rarity-border-bottom {
+  @each $rarity, $color in $rarities {
+    &.#{$rarity} {
+      border-bottom: 3px solid $color !important;
+    }
+  }
+}
+
 .rarity-background {
   @each $rarity, $color in $rarities {
     &.#{$rarity} {
