Item selling, fast drawing option, livedrop fix

--- a/src/styles/pages/Account/Account.scss
+++ b/src/styles/pages/Account/Account.scss
@@ -252,7 +252,15 @@
           position: relative;
           box-shadow: $box-shadow-1;
           opacity: 1;
+          transition: opacity 0.3s ease;
 
+          &.sold {
+            opacity: 0.5;
+          }
+
+          &:hover {
+            opacity: 1;
+          }
 
           .cover {
             width: 100%;
@@ -293,10 +301,20 @@
             padding: 12px;
             display: flex;
             gap: 8px;
+            position: relative;
 
             > div {
               padding: 0;
               padding-block: 8px;
+            }
+
+            .item-sold {
+              color: $red;
+              font-weight: 600;
+              text-align: center;
+              width: 100%;
+              margin-top: 3px;
+              font-size: 0.9rem;
             }
 
             .sell-button {
@@ -305,6 +323,7 @@
               font-weight: 600;
               font-size: 0.9rem;
               flex: 1;
+              cursor: pointer;
             }
 
             .upgrade-button {
@@ -312,6 +331,7 @@
               font-size: 0.8rem;
               font-weight: 600;
               padding-top: 10px;
+              cursor: pointer;
 
               svg {
                 color: $upgrader-color;
