--- a/src/styles/pages/Collection/Collection.scss
+++ b/src/styles/pages/Collection/Collection.scss
@@ -93,7 +93,6 @@
         gap: 8px;
 
         .option {
-          background: red;
           width: 45px;
           height: 35px;
           display: flex;
@@ -105,6 +104,21 @@
           color: #aaa;
           opacity: 0.5;
           cursor: pointer;
+          transition: color 0.3s ease, opacity 0.3s ease, border-color 0.3s ease;
+          box-shadow: $box-shadow-1;
+
+          svg {
+            transition: filter 0.2s ease;
+          }
+
+          &.fast.active {
+            color: #eee;
+            opacity: 1;
+
+            svg {
+              filter: drop-shadow(0 0 5px #eee);
+            }
+          }
         }
       }
     }
