--- a/src/styles/components/StatsSection.scss
+++ b/src/styles/components/StatsSection.scss
@@ -1,10 +1,9 @@
-@import '../../variables';
+@import '../variables';
 
 .home-stats {
   width: 100%;
   background: rgba(255,255,255,.02);
-  padding-block: 50px;
-  margin-top: 80px;
+  padding-block: 60px;
 
   .home-stats-container {
     display: flex;
