--- a/src/styles/pages/ProvablyFair/provablyfair.scss
+++ b/src/styles/pages/ProvablyFair/provablyfair.scss
@@ -42,4 +42,119 @@
       }
     }
   }
+
+  .provably-fair-options {
+    margin-top: 40px;
+
+    .section-header {
+      display: flex;
+      gap: 10px;
+
+      h2 {
+        cursor: pointer;
+        opacity: 0.5;
+        transition: opacity 0.2s ease;
+
+        svg {
+          color: #fff;
+          transition: color 0.2s ease;
+        }
+
+        &:hover {
+          opacity: 1;
+        }
+
+        &.active {
+          opacity: 1;
+
+          svg {
+            color: $primary;
+          }
+        }
+      }
+    }
+
+    .provably-fair-configuration {
+      margin-top: 30px;
+      display: grid;
+      gap: 12px;
+
+      .config-definition {
+        font-size: 0.7rem;
+        margin-top: 5px;
+        text-align: left;
+        padding-right: 5px;
+        font-weight: 400;
+        color: #aaa;
+      }
+
+      .config {
+        background: $background;
+        display: flex;
+        height: 70px;
+        border-radius: 10px;
+        border: 1px solid $border-color;
+
+        .config-name {
+          height: 100%;
+          background: $background-light;
+          width: 200px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          border-radius: 10px 0 0 10px;
+          text-transform: uppercase;
+          font-weight: 600;
+          border-right: 1px solid $border-color;
+        }
+
+        .config-value {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding-left: 20px;
+          position: relative;
+          flex: 1;
+
+          .value {
+            font-size: 0.9rem;
+            padding-bottom: 4px;
+          }
+
+          .secured {
+            font-size: 0.6rem;
+            color: $primary;
+          }
+
+          .created {
+            font-size: 0.6rem;
+            color: #aaa;
+          }
+
+          .config-options {
+            position: absolute;
+            right: 15px;
+            display: flex;
+            gap: 6px;
+
+            .config-option {
+              svg {
+                color: $primary;
+              }
+            }
+          }
+        }
+      }
+
+      .seed-history {
+        width: fit-content;
+        justify-self: end;
+
+        svg {
+          color: $primary;
+        }
+      }
+    }
+  }
 }
