--- a/src/styles/pages/Collection/Collection.scss
+++ b/src/styles/pages/Collection/Collection.scss
@@ -62,7 +62,7 @@
 
   .collection-content {
     position: relative;
-    z-index: 101;
+    z-index: 9;
     height: 100%;
 
     .collection-top {
@@ -217,6 +217,7 @@
   padding-bottom: 80px;
 
   .collection-items-content {
+    margin-top: 60px;
 
     .collection-items-list {
       display: grid;
