--- a/src/styles/pages/Collection/CollectionDrawer.scss
+++ b/src/styles/pages/Collection/CollectionDrawer.scss
@@ -10,6 +10,7 @@
   position: relative;
   overflow: hidden;
   margin-top: 24px;
+  display: flex;
 
   //.drawer-card {
   //  position: absolute;
@@ -169,6 +170,21 @@
     border-style: solid;
     border-width: 0 10px 10px 10px;
     border-color: transparent transparent $background-light transparent;
+  }
+
+  .drawer-positioner {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1196px;
+    height: 100%;
+
+    .drawer-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .drawer-carousel {
