Bug fixes, socket context, draw range modal

--- a/src/styles/components/Header/HeaderSearch.scss
+++ b/src/styles/components/Header/HeaderSearch.scss
@@ -56,6 +56,10 @@
         align-items: center;
         gap: 10px;
 
+        &:hover {
+          background: #292741;
+        }
+
         &:not(:last-child) {
           border-bottom: 1px solid $border-color;
         }
