--- a/src/styles/pages/ProvablyFair/ProvablyFair.scss
+++ b/src/styles/pages/ProvablyFair/ProvablyFair.scss
@@ -1,7 +1,7 @@
 @import '../../variables';
 
 .provably-fair main {
-  background-image: url("/public/backgrounds/m4howl.jpg");
+  background-image: url("/backgrounds/m4howl.jpg");
 }
 
 .provably-fair-wrapper {
