--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $primary: #43ea80;
-$background: #0d0c1d;
+$background: rgba(13, 12, 29, 1);
 $background-light: #1e1d2f;
 $background-dark: #070610;
 $red: #ff4444;
