--- a/src/styles/components/StatsSection.scss
+++ b/src/styles/components/StatsSection.scss
@@ -2,7 +2,7 @@
 
 .home-stats {
   width: 100%;
-  background: rgba(255,255,255,.02);
+  background: #0C0B15;
   padding-block: 60px;
 
   .home-stats-container {
