--- a/src/styles/pages/Admin/Admin.scss
+++ b/src/styles/pages/Admin/Admin.scss
@@ -10,4 +10,48 @@
   h1 svg {
     color: $giveaways-color;
   }
+
+  .skins-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+
+    .skin {
+      width: 10%;
+      padding: 10px;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #fff;
+      font-weight: 600;
+      position: relative;
+      border: 2px solid transparent;
+      opacity: 0.6;
+
+      &.selected {
+        border-color: lime;
+        opacity: 1;
+      }
+
+      .skin-cover {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,.6);
+        top: 0;
+        left: 0;
+      }
+
+      .skin-data {
+        position: relative;
+
+        .skin-image img {
+          width: 100%;
+        }
+      }
+
+      .chance-input {
+        width: 100%;
+      }
+    }
+  }
 }
