--- a/src/styles/pages/Home/HomeBestDrops.scss
+++ b/src/styles/pages/Home/HomeBestDrops.scss
@@ -4,6 +4,7 @@
   display: flex;
   margin-top: 20px;
   gap: 10px;
+  padding-bottom: 70px;
 
   .best-drop-item {
     border: 1px solid $border-color;
@@ -12,6 +13,21 @@
     flex-grow: 1;
     border-radius: 10px;
     position: relative;
+
+    &:after {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      backdrop-filter: blur(2px);
+      content: '';
+      border-radius: 10px;
+      z-index: 2;
+      opacity: 0;
+      background: rgba(0,0,0,0.1);
+      transition: opacity 0.3s ease;
+    }
 
     .cover {
       width: 100%;
@@ -35,6 +51,22 @@
       }
     }
 
+    &:hover {
+      .image img {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+
+      .image-card img {
+        transform: scale(1);
+        opacity: 1;
+      }
+
+      &:after {
+        opacity: 1;
+      }
+    }
+
     .image {
       position: absolute;
       top: 52%;
@@ -45,6 +77,25 @@
       img {
         width: 100%;
         filter: $filter-shadow;
+        transition: transform 0.4s ease, opacity 0.4s ease;
+      }
+    }
+
+    .image-card {
+      position: absolute;
+      top: 52%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 60%;
+      z-index: 3;
+
+      img {
+        height: 100%;
+        filter: $filter-shadow;
+        border-radius: 8px;
+        transition: transform 0.4s ease, opacity 0.4s ease;
+        transform: scale(1.2);
+        opacity: 0;
       }
     }
 
