--- a/src/styles/pages/ProvablyFair/ProvablyFairVerify.scss
+++ b/src/styles/pages/ProvablyFair/ProvablyFairVerify.scss
@@ -1,2 +1,56 @@
 @import '../../variables';
 
+.provably-fair-verify {
+  margin-top: 30px;
+
+  .latest-drop-list {
+    .drop-list-item {
+      display: flex;
+      height: 50px;
+      padding: 5px;
+      width: 100%;
+      background: $background-light;
+      align-items: center;
+      font-size: 0.9rem;
+      border-radius: 12px;
+      opacity: 0.5;
+      cursor: pointer;
+      transition: opacity 0.3s ease;
+      color: #ddd;
+
+      &:hover {
+        opacity: 1;
+      }
+
+      .drop-id {
+        padding-inline: 30px;
+        text-align: center;
+      }
+
+      .drop-image {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+
+        img {
+          height: 100%;
+        }
+      }
+
+      .drop-text {
+        font-weight: 600;
+        margin-left: 30px;
+      }
+
+      .drop-type {
+        width: fit-content;
+        margin-left: auto;
+        padding: 30px;
+
+        svg {
+          margin-right: 3px;
+        }
+      }
+    }
+  }
+}
