--- a/src/styles/pages/Upgrader/Upgrader.scss
+++ b/src/styles/pages/Upgrader/Upgrader.scss
@@ -10,4 +10,40 @@
   h1 svg {
     color: $upgrader-color;
   }
+
+  .upgrader-game {
+    display: flex;
+    height: 350px;
+    margin-top: 30px;
+    align-items: center;
+
+    .user-items {
+      flex: 1;
+      height: 80%;
+      background: rgba(13, 12, 29, 0.5);
+      border: 1px solid $border-color;
+      border-right: none;
+      border-radius: 30px 0 0 30px;
+      backdrop-filter: blur(5px);
+    }
+
+    .game {
+      width: 350px;
+      height: 100%;
+      background: blue;
+      border-radius: 30px;
+      background: $background;
+      border: 1px solid $border-color;
+    }
+
+    .server-items {
+      flex: 1;
+      height: 80%;
+      background: rgba(13, 12, 29, 0.5);
+      border: 1px solid $border-color;
+      border-left: none;
+      border-radius: 0 30px 30px 0;
+      backdrop-filter: blur(5px);
+    }
+  }
 }
