--- a/src/styles/pages/Account/Account.scss
+++ b/src/styles/pages/Account/Account.scss
@@ -92,7 +92,7 @@
 
                 .level-stripe {
                   height: 5px;
-                  width: 40%;
+                  width: 0%;
                   background-image: linear-gradient(45deg, #43ea80 25%, #31bd67 25%, #31bd67 50%, #43ea80 50%, #43ea80 75%, #31bd67 75%, #31bd67 100%);
                   background-size: 14.14px 14.14px;
                   border-radius: 5px;
@@ -125,6 +125,7 @@
           padding: 10px;
           justify-content: space-between;
           flex: 0;
+          min-width: 300px;
 
           .cover {
             position: absolute;
@@ -156,6 +157,9 @@
             padding-right: 10px;
             align-self: end;
             margin-bottom: 10px;
+            position: absolute;
+            right: 10px;
+            top: 30px;
 
             .weapon {
               color: #aaa;
