--- a/src/styles/pages/ProvablyFair/ProvablyFairVerify.scss
+++ b/src/styles/pages/ProvablyFair/ProvablyFairVerify.scss
@@ -3,53 +3,94 @@
 .provably-fair-verify {
   margin-top: 30px;
 
-  .latest-drop-list {
-    .drop-list-item {
-      display: flex;
-      height: 50px;
-      padding: 5px;
-      width: 100%;
-      background: $background-light;
-      align-items: center;
-      font-size: 0.9rem;
-      border-radius: 12px;
-      opacity: 0.5;
-      cursor: pointer;
-      transition: opacity 0.3s ease;
-      color: #ddd;
+  .roll-input {
+    background: $background-light;
+    width: fit-content;
+    border-radius: 6px;
+    padding-left: 16px;
+    margin: auto;
+    border: 1px solid $border-color;
+    height: 38px;
+    font-weight: 200;
+
+    input {
+      background: none;
+      outline: none;
+      border: none;
+      color: #fff;
+      height: 38px;
+      font-family: "BR Cobane", sans-serif;
+      font-weight: 600;
+      -webkit-appearance: none;
+      -moz-appearance: textfield;
+      width: 100px;
+      padding-right: 8px;
+    }
+
+    button {
+      background: $border-color;
+      font-size: 1rem;
+      height: 36px;
+      aspect-ratio: 1/1;
+      border-radius: 0 5px 5px 0;
+      transition: color 0.3s ease;
 
       &:hover {
-        opacity: 1;
+        color: $primary;
       }
-
-      .drop-id {
-        padding-inline: 30px;
-        text-align: center;
+      svg {
+        margin-right: 0 !important;
       }
+    }
+  }
 
-      .drop-image {
+  .verify-result {
+    margin-top: 20px;
+
+    h2 {
+      font-size: 1rem;
+    }
+
+    .verify-fields {
+      display: grid;
+      gap: 10px;
+      margin-top: 6px;
+    }
+
+    .verify-field {
+      background: $background;
+      display: flex;
+      height: 50px;
+      border-radius: 10px;
+      border: 1px solid $border-color;
+      font-size: 0.9rem;
+
+      .verify-field-name {
         height: 100%;
+        background: $background-light;
+        width: 200px;
         display: flex;
+        align-items: center;
         justify-content: center;
-
-        img {
-          height: 100%;
-        }
-      }
-
-      .drop-text {
+        flex-direction: column;
+        border-radius: 10px 0 0 10px;
+        text-transform: uppercase;
         font-weight: 600;
-        margin-left: 30px;
+        border-right: 1px solid $border-color;
       }
 
-      .drop-type {
-        width: fit-content;
-        margin-left: auto;
-        padding: 30px;
+      .verify-field-value {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 20px;
+        position: relative;
+        flex: 1;
+      }
 
-        svg {
-          margin-right: 3px;
-        }
+      .secured {
+        font-size: 0.6rem;
+        color: #43ea80;
       }
     }
   }
